properties vs. natures

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
@@ -41,31 +41,31 @@ how you achieve integration.&nbsp; So where to start?</P>
 <font color='#4444CC'> <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a>
 </b></font>that represents your implementation.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li><a href="team_provider_define.htm">Define your provider using <b>org.eclipse.team.core.repository</b>.</a></li>
           <li>Subclass <b><font color='#4444CC'><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a>
             </font></b>and <a href="team_provider_implement.htm">implement the
             necessary methods.</a></li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Provide a configuration wizard so that users can associate
         your provider with their projects.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li><a href="team_ui_configure.htm">Contribute a wizard using <b>org.eclipse.team.ui.configurationWizards</b>.</a></li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Add your actions to the Team menu.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li><a href="team_ui_actions.htm">Add your actions to the Team menu.</a></li>
           <li>Use the <a href="workbench_basicext_popupMenus.htm">popup menu
             extension</a> to define the menu items.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
   </table>
@@ -75,20 +75,30 @@ how you achieve integration.&nbsp; So where to start?</P>
       <td width="32%">Add provider-specific properties to the properties page
         for a resource.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Use the <a href="preferences_prop.htm">propertyPages</a> extension
             to show team-specific properties for your resource.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Implement specialized decorators to show team-related
         attributes</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li><a href="team_ui_decorators.htm">Contribute decorators</a> to
             resource views.</li>
-        </ol>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td width="32%">Reduce clutter by filtering out any resources that are
+        used in implementing team support.&nbsp;</td>
+      <td width="68%">
+        <ul>
+          <li>Use <a href="team_resources_private.htm">team-private resources</a>
+            to hide implementation files and folders.</li>
+        </ul>
       </td>
     </tr>
   </table>
@@ -98,36 +108,61 @@ how you achieve integration.&nbsp; So where to start?</P>
       <td width="32%">Intervene in the saving of resources so you can check
         permissions before a user changes a file.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Implement the <a href="team_provider_hooks.htm">fileModificationValidator</a>
             hook.</li>
           <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateSave(org.eclipse.core.resources.IFile)">validateSave</a>
             to prevent or intervene in saving of files.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Intervene before a user edits a file to see if it's
         allowed.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Implement the <a href="team_provider_hooks.htm">fileModificationValidator</a>
             hook.</li>
           <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateEdit(org.eclipse.core.resources.IFile[], java.lang.Object)">validateEdit</a>
             to prevent or intervene in saving of files.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Track changes to resources in the workspace so you can
         allow associated changes in the repository.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Use the <a href="team_provider_hooks.htm">move/Delete hooks</a> to
             prevent or enhance moving and deleting of resources.</li>
           <li>See <a href="../reference/api/org/eclipse/core/resources/team/IMoveDeleteHook.html"><b>IMoveDeleteHook</b></a>
             <b> </b>for more detail about what you can do.</li>
-        </ol>
+        </ul>
+      </td>
+    </tr>
+  </table>
+  <h3>Streamlining repository-related tasks</h3>
+  <table border="1" cellpadding="0" cellspacing="0" width="73%">
+    <tr>
+      <td width="32%">Provide an easy way to export a description of your
+        projects.</td>
+      <td width="68%">
+        <ul>
+          <li>Use <a href="team_resources_projects.htm">project sets</a> to
+            export your projects without exporting the content so that users can
+            rebuild projects from the repository.</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td width="32%">Reduce clutter in the repository by ignoring files that
+        can be regenerated.</td>
+      <td width="68%">
+        <ul>
+          <li>Honor the <a href="team_resources_filetypes.htm">ignore</a>
+            extension when handling files and use ignore for your plug-in's
+            derived files.</li>
+        </ul>
       </td>
     </tr>
   </table>
@@ -137,45 +172,45 @@ how you achieve integration.&nbsp; So where to start?</P>
     <tr>
       <td width="32%">Add provider-specific preferences to the preferences page.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li><a href="team_ui_prefs.htm">Add your preferences to the Team
             category.</a></li>
           <li><a href="preferences_prefs_implement.htm">Build your preference
             page</a> using workbench support.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Implement custom views to show detailed information about
         repositories or their resources.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Use the <a href="workbench_basicext_views.htm">views</a> extension
             to contribute a view.</li>
           <li>See the CVS provider's repository view for an example.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Add your views or actions to existing workbench
         perspectives if appropriate.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Use the <a href="workbench_advext_perspectiveExtension.htm">perspectiveExtension</a>
             extension to add your plug-in's shortcuts or views to existing
             perspectives.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
     <tr>
       <td width="32%">Implement a repository-specific perspective to streamline
         repository administration or browsing.</td>
       <td width="68%">
-        <ol>
+        <ul>
           <li>Use the <a href="workbench_advext_perspectives.htm">perspectives</a>
             extension to define your own perspective, views, short cuts, and
             page layout.</li>
-        </ol>
+        </ul>
       </td>
     </tr>
   </table>
