--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
@@ -15,10 +15,14 @@ Repository providers</H2>
 A repository provider (<b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>) is the central class in the implementation of your
 repository.&nbsp; This class is responsible for configuring a project for
 repository management and providing the necessary hooks for resource
-modification.&nbsp; Providers are associated with a project using the <a href="resAdv_natures.htm">project
-nature</a> mechanism.&nbsp;&nbsp;</P>
+modification.&nbsp; Providers are mapped to a project using <a href="resInt_properties.htm">project
+persistent properties</a>.&nbsp; The mechanism for mapping providers to a
+project is not central to the team API, but you'll need to be aware of it when
+filtering out resources in your UI.&nbsp; For the most part, you'll be using
+team API to work with projects and associate them to your provider.&nbsp;&nbsp;</P>
 <P >
-To implement a provider, you must define a project nature and supply a class
+To implement a provider, you must define a repository using <a href="../reference/extension-points/org_eclipse_team_core_repository.html"><b>org.eclipse.team.core.repository</b></a>
+and supply a class
 derived from&nbsp; <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>.&nbsp; We'll use the CVS client as an example to see how this
 works.</P>
 
