--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_configure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_configure.htm
@@ -13,9 +13,9 @@
    Configuring a project
 </h3><p>Typically, the first step in building a team UI is implementing a wizard
 page that allows users to configure a project for your plug-in's team
-support.&nbsp; The act of configuring a project is what assigns your team
-project nature to a project.&nbsp; You participate in project configuration by
-contributing to the <a href="../reference/extension-points/org_eclipse_team_ui_configurationWizards.html">org.eclipse.team.ui.configurationWizards</a>
+support.&nbsp; This is where your team provider's id will be added to the
+project's properties.&nbsp; You participate in project configuration by
+contributing to the <a href="../reference/extension-points/org_eclipse_team_ui_configurationWizards.html"><b>org.eclipse.team.ui.configurationWizards</b></a>
 extension point.&nbsp; This wizard is shown when the user chooses <b>Team-&gt;Share
 Project...</b>
 </p>
@@ -39,12 +39,42 @@ multiple providers to choose from.
 <p>Once the user has selected a provider, the next page shows the specific
 configuration information for your provider.&nbsp; (If your provider is the only
 team provider plug-in installed, then the wizard skips directly to your
-page.)&nbsp; Your wizard must implement <a href="../reference/api/org/eclipse/team/ui/IConfigurationWizard.html">IConfigurationWizard</a>,
+page.)&nbsp; Your wizard must implement <a href="../reference/api/org/eclipse/team/ui/IConfigurationWizard.html"><b>IConfigurationWizard</b></a>,
 which initializes the wizard for a specified workbench and project.&nbsp; The
 rest of the implementation depends on the design of your wizard.&nbsp; You must
 gather up any information needed to associate the project with your team
-support.&nbsp; When the wizard is completed, you must set your provider's nature
-on the project to signify that it is now configured by your provider.
+support.&nbsp;&nbsp;
+</p>
+
+
+
+
+<p> When the wizard is completed, you must map your team provider to the project
+using <b><font color='#4444CC'><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html#map(org.eclipse.core.resources.IProject, java.lang.String)">RepositoryProvider.map(IProject,
+String)</a></font></b>.&nbsp; Mapping handles the assignment of the correct
+project persistent property to your project.
+</p>
+
+
+
+
+<p> The CVS client does this work in its provider's <b>setSharing</b>
+method, which is called when its wizard is finished:
+</p>
+
+
+
+
+<pre><font color="#4444CC">public void setSharing(IProject project, FolderSyncInfo info, IProgressMonitor monitor) throws TeamException {
+	
+	// Ensure provided info matches that of the project
+	...		
+	// Ensure that the provided location is managed
+	...		
+	// Register the project with Team
+<b>	RepositoryProvider.map(project, CVSProviderPlugin.getTypeId());
+</b>}</font></pre>
+<p>&nbsp;
 </p>
 
 
