--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_implement.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_implement.htm
@@ -22,20 +22,27 @@ The CVS client serves as a good example.&nbsp; Its repository provider is <b>CVS
 
 	...</pre><p> <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a> </b>defines two abstract methods, <b>configureProject</b> and <b>deconfigure</b>.&nbsp;
 All providers must implement these methods.&nbsp; </p><p>A project is configured
-when it is first associated with a particular repository provider.&nbsp; This is
-the appropriate time to compute or cache any data about the project.&nbsp; The
+when it is first associated with a particular repository provider.&nbsp; This
+typically happens when the user selects a project and uses the team wizards to
+associate a project with your repository.&nbsp; Regardless of how the operation
+is triggered, this is
+the appropriate time to compute or cache any data about the project that you'll
+need to provide your repository function.&nbsp; (Assume that mapping the project
+to your provider has already happened.&nbsp; You'll be taking care of this in
+your configuration wizard.)</p><p>The
 CVS provider simply broadcasts the fact that a project has been configured:</p><pre>public void configureProject() throws CoreException {
 	CVSProviderPlugin.broadcastProjectConfigured(getProject());
 }</pre><p>We won't follow the implementation of the plug-in broadcast
 mechanism.&nbsp; Suffice to say that any parties that need to compute or
 initialize project specific data can do so at this time.</p><p>A project is
-deconfigured when the nature is removed from the project.&nbsp; This is the
+deconfigured when the user no longer wants to associate a team provider with a
+project.&nbsp;&nbsp; It is up to your plug-in to implement the user action that
+causes this to happen (and unmapping the project from your team provider will
+happen there).&nbsp; The <b>deconfigure</b> method&nbsp; is the
 appropriate time to delete any project related caches or remove any references
 to the project in the UI.&nbsp; The CVS provider flushes project related caches
 kept in its views and broadcasts the fact that the project is deconfigured.</p><pre>public void deconfigure() throws CoreException {
-	// when a nature is removed from the project, notify the synchronizer that
-	// we no longer need the sync info cached. This does not affect the actual CVS
-	// meta directories on disk, and will remain unless a client calls unmanage().
+	...
 	try {
 		EclipseSynchronizer.getInstance().flush(getProject(), true, true /*flush deep*/, null);
 	} catch(CVSException e) {
