*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_howto.htm
@@ -63,8 +63,8 @@ how you achieve integration.&nbsp; So where to start?</P>
       <td width="68%">
         <ul>
           <li><a href="team_ui_actions.htm">Add your actions to the Team menu.</a></li>
-          <li>Use the <a href="workbench_basicext_popupMenus.htm">popup menu
-            extension</a> to define the menu items.</li>
+          <li>Use the <a href="workbench_basicext_popupMenus.htm"><b>popupMenus</b></a>
+            extension to define the menu items.</li>
         </ul>
       </td>
     </tr>
@@ -76,7 +76,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         for a resource.</td>
       <td width="68%">
         <ul>
-          <li>Use the <a href="preferences_prop.htm">propertyPages</a> extension
+          <li>Use the <a href="preferences_prop.htm"><b>propertyPages</b></a> extension
             to show team-specific properties for your resource.</li>
         </ul>
       </td>
@@ -111,7 +111,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         <ul>
           <li>Implement the <a href="team_provider_hooks.htm">fileModificationValidator</a>
             hook.</li>
-          <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateSave(org.eclipse.core.resources.IFile)">validateSave</a>
+          <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateSave(org.eclipse.core.resources.IFile)"><b>validateSave</b></a>
             to prevent or intervene in saving of files.</li>
         </ul>
       </td>
@@ -123,7 +123,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         <ul>
           <li>Implement the <a href="team_provider_hooks.htm">fileModificationValidator</a>
             hook.</li>
-          <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateEdit(org.eclipse.core.resources.IFile[], java.lang.Object)">validateEdit</a>
+          <li>Use <a href="../reference/api/org/eclipse/core/resources/FileModificationValidator.html#validateEdit(org.eclipse.core.resources.IFile[], java.lang.Object)"><b>validateEdit</b></a>
             to prevent or intervene in saving of files.</li>
         </ul>
       </td>
@@ -159,7 +159,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         can be regenerated.</td>
       <td width="68%">
         <ul>
-          <li>Honor the <a href="team_resources_filetypes.htm">ignore</a>
+          <li>Honor the <a href="team_resources_filetypes.htm"><b>ignore</b></a>
             extension when handling files and use ignore for your plug-in's
             derived files.</li>
         </ul>
@@ -185,7 +185,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         repositories or their resources.</td>
       <td width="68%">
         <ul>
-          <li>Use the <a href="workbench_basicext_views.htm">views</a> extension
+          <li>Use the <a href="workbench_basicext_views.htm"><b>views</b></a> extension
             to contribute a view.</li>
           <li>See the CVS provider's repository view for an example.</li>
         </ul>
@@ -196,7 +196,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         perspectives if appropriate.</td>
       <td width="68%">
         <ul>
-          <li>Use the <a href="workbench_advext_perspectiveExtension.htm">perspectiveExtension</a>
+          <li>Use the <a href="workbench_advext_perspectiveExtension.htm"><b>perspectiveExtension</b></a>
             extension to add your plug-in's shortcuts or views to existing
             perspectives.</li>
         </ul>
@@ -207,7 +207,7 @@ how you achieve integration.&nbsp; So where to start?</P>
         repository administration or browsing.</td>
       <td width="68%">
         <ul>
-          <li>Use the <a href="workbench_advext_perspectives.htm">perspectives</a>
+          <li>Use the <a href="workbench_advext_perspectives.htm"><b>perspectives</b></a>
             extension to define your own perspective, views, short cuts, and
             page layout.</li>
         </ul>
