--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_find.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_find.htm
@@ -12,9 +12,15 @@
 <h3>
    Finding a provider
 </h3><p>Static methods in <font color="#4444CC"><b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b></font>
-make it easy for clients to find the providers associated with a given project.
+make it easy for clients to map projects to providers and to find the providers associated with a given project.
 </p>
 <ul>
+  <li><b>map(IProject, String)</b> - instantiates a provider of the specified
+    provider id and maps the specified project to it.&nbsp; This call sets the
+    proper project persistent property on the project. </li>
+  <li><b>unmap(IProject, String)</b> - removes the association of the specified
+    provider id from the specified project.&nbsp; Leaves the project
+    unassociated with any team provider. </li>
   <li><b>getProvider(IProject)</b> - answers the provider for a given
     project.&nbsp; Can be used to find any team provider for a project.&nbsp; </li>
   <li><b>getProvider(IProject, String) </b>- answers the provider for a given
