--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_private.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_private.htm
@@ -14,7 +14,7 @@
 store information specific about the repository implementation.&nbsp; Although
 these files may be needed in the workspace, they are of no interest to other
 plug-ins or to the end user.</p>
-<p>Team providers may use <a href="../reference/api/org/eclipse/core/resources/IResource.html">IResource</a>.<b>setTeamPrivateMember(boolean)
+<p>Team providers may use <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>.<b>setTeamPrivateMember(boolean)
 </b>to indicate that a resource is private to the implementation of a team
 provider. Newly created resources are not private members by default, so this
 method must be used to explicitly mark the resource as team private.&nbsp; A
