--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_projects.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_projects.htm
@@ -16,7 +16,7 @@ reference to the repository specific information needed to reconstruct a project
 in the workspace.&nbsp; This is done using a special type of file export for <b>team
 project sets</b>.&nbsp;&nbsp;</p>
 <p><img border="0" src="images/projectset.jpg" width="470" height="550"></p>
-<p>The <a href="../reference/extension-points/org_eclipse_team_ignore.html">org.eclipse.team.projectSets</a>
+<p>The <a href="../reference/extension-points/org_eclipse_team_ignore.html"><b>org.eclipse.team.projectSets</b></a>
 extension point allows repository providers to declare a class that implements
 project saving for projects under their control.&nbsp; When the user chooses to
 export project sets, only the projects configured with repositories that define
@@ -25,7 +25,7 @@ project sets are shown as candidates for export.</p>
 <pre><font color="#4444CC">&lt;extension point=&quot;org.eclipse.team.core.projectSets&quot;&gt;
 	&lt;projectSet id=&quot;org.eclipse.team.cvs.core.cvsnature&quot; class=&quot;org.eclipse.team.internal.ccvs.ui.CVSProjectSetSerializer&quot;/&gt;
 &lt;/extension&gt;</font></pre>
-<p>The specified class must implement <a href="../reference/api/org/eclipse/team/core/IProjectSetSerializer.html">IProjectSetSerializer</a>.</p>
+<p>The specified class must implement <a href="../reference/api/org/eclipse/team/core/IProjectSetSerializer.html"><b>IProjectSetSerializer</b></a>.</p>
 <p>
    &nbsp;
 </p>
