--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
@@ -35,7 +35,7 @@ and content of decorators.
 
 
 
-<p>See <a href="../reference/extension-points/org_eclipse_ui_decorators.html">org.eclipse.ui.decorators</a>
+<p>See <a href="../reference/extension-points/org_eclipse_ui_decorators.html"><b>org.eclipse.ui.decorators</b></a>
 for a complete description of the decorator extension point.&nbsp; The CVS
 decorator markup is as follows:
 </p>
