*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_update.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_update.htm
@@ -37,11 +37,9 @@ update support as defined by the default implementation?</p>
 <p>The previous example product and extension directory structures show how
 features and plug-ins are laid out once they are installed.&nbsp; In order to
 install features using the update server, the features must be packaged in a
-feature archive file.&nbsp; This is described in <a href="../reference/misc/feature_archive.html">Eclipse
-Platform Feature
+feature archive file.&nbsp; This is described in <a href="../reference/misc/feature_archive.html"> Feature
 Archive Files</a>. </p>
-<p>Plug-ins and fragments must be packaged according to the format described in <a href="../reference/misc/plugin_archive.html">Eclipse
-Platform Plug-in
+<p>Plug-ins and fragments must be packaged according to the format described in <a href="../reference/misc/plugin_archive.html"> Plug-in
 Archive Files</a>.</p>
 <h3>Update server layout</h3>
 <p>The update server must be a URL-accessible server with a fixed layout.&nbsp;
@@ -65,8 +63,7 @@ the feature manifest.</p>
 		com.example.betterwebs.betterfeature_1.0.1.jar
 		com.example.betterwebs.betterwebsupport_1.0.1.jar
 		...</font></pre>
-<p>The complete definition for the site map is described in <a href="../reference/misc/update_sitemap.html">Eclipse
-Platform Update Server Site Map</a>.</p>
+<p>The complete definition for the site map is described in <a href="../reference/misc/update_sitemap.html"> Update Server Site Map</a>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
