*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help.htm
@@ -24,9 +24,8 @@ Separating the documentation into a separate plug-in is beneficial in those situ
 <P >
 Advanced features of the help system include context-sensitive help with
 reference links (known as <b>infopops</b>) and the ability to invoke platform
-code from the documentation.&nbsp; An integrated help viewer lets you view,
-print, and search your documentation.&nbsp; You can also choose to use a
-standard web browser to view the documentation. </P>
+code from the documentation.&nbsp; A help browser lets you view,
+print, and search your documentation.&nbsp;&nbsp; </P>
 <P >The best way to demonstrate the contribution of help is to create a
 documentation plug-in.</P>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
