--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -22,10 +22,15 @@ Invoking the action from HTML</h3>
 
 <P >The live help JavaScript is located in the <b>org.eclipse.help</b>
 plug-in.&nbsp; You can refer to it using the help system's <a href="help_plugin_files.htm#help_plugin_files_xref">cross
-plug-in referencing</a> technique.&nbsp; In this example, the document with the
+plug-in referencing</a> technique.&nbsp;&nbsp; </P>
+
+
+<P > In this example, we have to navigate up two levels in the directory
+structure.&nbsp; The document with the
 active help link is located in the subdirectory <b>guide</b> underneath our
-plug-in directory.&nbsp; So we must navigate up two directories to reach the
-plug-in root and then refer to the <b>org.eclipse.help</b> plug-in. </P>
+plug-in directory.&nbsp; So we must navigate up one directory to reach our plug-in's
+root, and another level to reach the &quot;virtual&quot; location of all
+plug-ins.&nbsp;&nbsp; Then we can refer to the <b>org.eclipse.help</b> plug-in. </P>
 
 
 <P >
