--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
@@ -47,6 +47,18 @@ file for documents before it looks in the plug-in directory itself.&nbsp; When u
 <pre ><font color='#4444CC'>   &lt;topic label=&quot;Ref1&quot; href=&quot;http://www.example.com/myReference.html&quot;/&gt;</font></pre>
 
 
+<h4 >National language and translated documentation</h4>
+
+
+<p >The platform help system uses the same national language directory lookup
+scheme used by the rest of the platform for finding translated files.&nbsp; (See
+<a href="product_def_nl.htm#platform">Locale specific files</a> for an
+explanation of this directory structure.)&nbsp; If you are using a <b>doc.zip</b>
+file, you should produce a <b>doc.zip</b> file for <b>each</b> locale and place
+it inside the correct locale directory.&nbsp; (You should not replicate the <b>nl</b>
+locale directory structure inside the zip file.)</p>
+
+
 <h4 ><a name="help_plugin_files_xref">Cross plug-in referencing</a></h4>
 
 
