--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -43,9 +43,10 @@ update our <b> plugin.xml</b> to actually contribute the master toc.&nbsp; </P>
       &lt;toc file=&quot;toc.xml&quot; <b>primary</b>=&quot;true&quot; /&gt;
    &lt;/extension&gt;</pre></font>
 <P >Note the use of the <b>primary</b> attribute.&nbsp; Setting this attribute
-to true indicates that the toc should appear in the top level list of books in
-the help viewer.&nbsp; This is what makes our <b>toc.xml</b> file the
-&quot;master&quot; toc. </P>
+to true indicates that the toc should always appear in the navigation, even if
+it is not referenced by any other toc.&nbsp; This way, our &quot;master&quot;
+toc is always guaranteed to show up in the topics list.&nbsp; It appears at the
+top level list of books since no other toc references it.&nbsp;&nbsp; </P>
 <P >Finally, we contribute our individual toc files. </P>
 <font color='#4444CC'><pre>   &lt;extension point=&quot;org.eclipse.help.toc&quot;&gt;
        &lt;toc file=&quot;toc_Concepts.xml&quot; /&gt;
